# edge-tts-rust

./: Cargo.toml
examples/hello/: main.rs
src/: lib.rs  synthesize.rs
