[package]
name = "edge-tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
futures-util = "0.3.28"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"], optional = true }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls-vendored"] }
tracing = "0.1.37"
reqwest = { version = "0.11.20", features = ["json"], optional = true }
xml = "0.8.10"

[features]
voice_list = ["serde", "reqwest"]
